# data-compaction-job

./: .dockerignore  .gitignore  Makefile  README.md  application.conf  build.sbt  driver.py  setup.cfg  spark-defaults.conf
.bsp/: sbt.json
data_compaction_job/: __init__.py  config.py  iomete_logger.py  logger.py  main.py  sql_compaction.py  stats_emitter.py  utils.py
data_compaction_job/tests/: _spark_session.py  test_data_compaction_job.py
docker/: Dockerfile
src/main/docker/: Dockerfile.jvm
src/main/docker/docker_files/: log4j.properties
src/main/scala/com/iomete/spark/datacompaction/: SqlCompaction.scala
tests/: __init__.py  _spark_session.py  test_data_compaction_job.py
