[metadata]
name = data_compaction_job
version = 1.2.5
author = Fuad M.
author_email = fuad@iomete.com
description = iomete: Data Compaction Job
long_description = file: readme.md
long_description_content_type = text/markdown
keywords = data_compaction_job
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = data_compaction_job
install_requires =
    pyhocon==0.3.59
    requests==2.26.0

[options.extras_require]
dev =
    pyspark==3.5.3
    pytest==7.1.2

[pycodestyle]
max_line_length = 150
